# auth/docs/swagger.yaml
@@ -1,4 +1,21 @@
 definitions:
+  http.AuthLocalValidator:
+    properties:
+      email:
+        type: string
+    required:
+    - email
+    type: object
+  http.AuthLocalVerificationValidator:
+    properties:
+      email:
+        type: string
+      token:
+        type: string
+    required:
+    - email
+    - token
+    type: object
   http.HTTPErrorMessage:
     properties:
       error:
@@ -16,6 +33,73 @@ definitions:
       refresh_token:
         type: string
     type: object
+  http.HTTPUserIntrospection:
+    properties:
+      claims:
+        $ref: '#/definitions/types.JWTClaims'
+      federated_identity:
+        $ref: '#/definitions/types.FederatedIdentity'
+      user:
+        $ref: '#/definitions/types.User'
+    type: object
+  jwt.NumericDate:
+    properties:
+      time.Time:
+        type: string
+    type: object
+  types.FederatedIdentity:
+    properties:
+      data:
+        type: string
+      id:
+        type: string
+      provider:
+        type: string
+      user_id:
+        type: string
+    type: object
+  types.JWTClaims:
+    properties:
+      aud:
+        description: the `aud` (Audience) claim. See https://datatracker.ietf.org/doc/html/rfc7519#section-4.1.3
+        items:
+          type: string
+        type: array
+      exp:
+        allOf:
+        - $ref: '#/definitions/jwt.NumericDate'
+        description: the `exp` (Expiration Time) claim. See https://datatracker.ietf.org/doc/html/rfc7519#section-4.1.4
+      iat:
+        allOf:
+        - $ref: '#/definitions/jwt.NumericDate'
+        description: the `iat` (Issued At) claim. See https://datatracker.ietf.org/doc/html/rfc7519#section-4.1.6
+      iss:
+        description: the `iss` (Issuer) claim. See https://datatracker.ietf.org/doc/html/rfc7519#section-4.1.1
+        type: string
+      jti:
+        description: the `jti` (JWT ID) claim. See https://datatracker.ietf.org/doc/html/rfc7519#section-4.1.7
+        type: string
+      nbf:
+        allOf:
+        - $ref: '#/definitions/jwt.NumericDate'
+        description: the `nbf` (Not Before) claim. See https://datatracker.ietf.org/doc/html/rfc7519#section-4.1.5
+      sub:
+        description: the `sub` (Subject) claim. See https://datatracker.ietf.org/doc/html/rfc7519#section-4.1.2
+        type: string
+      user_id:
+        type: string
+    type: object
+  types.User:
+    properties:
+      email:
+        type: string
+      id:
+        type: string
+      picture:
+        type: string
+      username:
+        type: string
+    type: object
 info:
   contact:
     email: tristan-mihai.radulescu@etu.umontpellier.fr
@@ -28,6 +112,12 @@ paths:
   /auth/{provider}:
     get:
       description: Use this endpoint to authenticate with redirect
+      parameters:
+      - description: Provider name
+        in: path
+        name: provider
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -66,6 +156,13 @@ paths:
   /auth/local/begin:
     post:
       description: Use this endpoint to authenticate with code
+      parameters:
+      - description: Email
+        in: body
+        name: email
+        required: true
+        schema:
+          $ref: '#/definitions/http.AuthLocalValidator'
       produces:
       - application/json
       responses:
@@ -83,6 +180,13 @@ paths:
   /auth/local/verify:
     post:
       description: Use this endpoint to verify auth token
+      parameters:
+      - description: Token
+        in: body
+        name: token
+        required: true
+        schema:
+          $ref: '#/definitions/http.AuthLocalVerificationValidator'
       produces:
       - application/json
       responses:
@@ -112,6 +216,29 @@ paths:
           schema:
             $ref: '#/definitions/http.HTTPErrorMessage'
       summary: Logout
+      tags:
+      - auth
+  /auth/me:
+    get:
+      description: Use this endpoint to introspect the token
+      parameters:
+      - description: Authorization
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/http.HTTPUserIntrospection'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/http.HTTPErrorMessage'
+      summary: Introspect
       tags:
       - auth
   /auth/renew:
